<resources>
    <string name="username">Login</string>
    <string name="password">Senha</string>
    <string name="username_description">Insira o seu nome</string>
    <string name="pass_description">Insira a sua senha</string>
    <string name="login">Entrar</string>
    <string name="app_name">Cuidador de Criança</string>
    <string name="create_account">Criar Conta</string>
    <string name="create_account_text">Criar conta</string>
    <string name="new_username">Insira o nome do seu usuário</string>
    <string name="new_password">Insira uma nova senha</string>
    <string name="logged_message">Você está logado</string>
</resources>