<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:hint="@string/username"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_description"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/pass_description"/>


    <Button
        android:layout_marginTop="38dp"
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textSize="14sp" />

</LinearLayout>