<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".CreateAccount">

    <EditText
        android:id="@+id/newUsername"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_username"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/newPassword"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/new_password"/>

    <Button
        android:layout_marginTop="38dp"
        android:id="@+id/createAccountBtn"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/create_account_text"
        android:textSize="14sp" />

</LinearLayout>